--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
       <header>
         <h1><em>Quizz OnePiece</em></h1>
       </header>
-      <section id="container_question" class="hide question_block">
+      <section id="container_question" class="question_block hide">
         <article id="question">Question</article>
         <article id="container_answer" class="btn-list"></article>
       </section>
       <section id="answerTrueOrFalse" class="answerTrueOrFalse"></section>
-      <section id="result">Bravo vous avez terminer le Quizz</section>
+      <section id="congratulation">Bravo vous avez terminer le Quizz</section>
+      <section id="result"></section>
       <section class="controls btn_block">
         <button id="btn-start" class="btn_start btn">Commencer le quizz</button>
         <button id="btn-next" class="btn_next btn hide">
